--- a/indexf.html
+++ b/indexf.html
@@ -11,10 +11,43 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
+    <header class="banner-area">
         <section class="container">
-
+            <nav class="nav-sec">
+                <div class="primary-logo">
+                    <img src="./images/logo.png" alt="">
+                </div>
+                <div class="primary-menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Feature</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="banner-content">
+                <div class="bc-left">
+                    <h1>Cartoons And Anime Series Stream Anytime On <span class="default-color">Cosmic World</span></h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quibusdam, laboriosam laudantium quisquam odit sit eaque consequuntur recusandae veritatis fuga.</p>
+                    <a class="default-btn" href="#">Browse Now</a>
+                </div>
+                <div class="bc-right">
+                    <img src="./images/banner.png" alt="">
+                </div>
+            </div>
         </section>
     </header>
+    <main>
+        <section class="container">
+            <div class="feature-title">
+                <h1>Fea<span class="default-color">t</span>ure</h1>
+            </div>
+            <div class="feature-card">
+                
+            </div>
+        </section>
+    </main>
 </body>
 </html>
